...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: AnimatedOpacity(
          opacity: _showTitle ? 1 : 0,
          duration: Duration(milliseconds: 300),
          child: const Text('Choose your interests'),
        ),
      ),
      body: Scrollbar(
        controller: _scrollController,
        child: SingleChildScrollView(
          controller: _scrollController,
...
          child: Container(
            padding: const EdgeInsets.symmetric(
              vertical: Sizes.size20,
            ),
            decoration: BoxDecoration(color: Theme.of(context).primaryColor),
            child: const Text(
              "Next",
              textAlign: TextAlign.center,
              style: TextStyle(
                fontSize: Sizes.size16,
                color: Colors.white,
              ),
            ),
...
